--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>maven-project-template</artifactId>
-  <version>2021.01.10</version>
+  <groupId>org.padaiyal.utilities</groupId>
+  <artifactId>commandline</artifactId>
+  <version>2021.01.13</version>
 
   <parent>
     <groupId>org.padaiyal</groupId>
@@ -17,9 +18,8 @@
   <distributionManagement>
     <repository>
       <id>github</id>
-      <name>jMavenProjectTemplate MVN package deployment</name>
-      <url>https://maven.pkg.github.com/padaiyal/jMavenProjectTemplate</url>
+      <name>jCommandLine MVN package deployment</name>
+      <url>https://maven.pkg.github.com/padaiyal/jCommandLine</url>
     </repository>
   </distributionManagement>
-
 </project>
