--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.padaiyal.utilities</groupId>
   <artifactId>commandline</artifactId>
-  <version>2021.01.17</version>
+  <version>2021.01.20</version>
 
   <parent>
     <groupId>org.padaiyal</groupId>
@@ -22,4 +22,21 @@
       <url>https://maven.pkg.github.com/padaiyal/jCommandLine</url>
     </repository>
   </distributionManagement>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.padaiyal.utilities</groupId>
+      <artifactId>properties</artifactId>
+      <version>2021.01.13</version>
+      <scope>system</scope>
+      <systemPath>${pom.basedir}/properties-2021.01.13.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>org.padaiyal.utilities</groupId>
+      <artifactId>i18n</artifactId>
+      <version>2021.01.14</version>
+      <scope>system</scope>
+      <systemPath>${pom.basedir}/i18n-2021.01.14.jar</systemPath>
+    </dependency>
+  </dependencies>
 </project>
